<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

  <TextView
        android:id="@+id/text_startTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/home"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />
      
 
    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
       <TextView
        android:id="@+id/txt_scholarship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/purchases"
        android:textStyle="bold"
         android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />

    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
   
       <TextView
        android:id="@+id/txt_scoreCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/notification"
        android:textStyle="bold"
         android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />
      

    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
   
       <TextView
        android:id="@+id/txt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/my_profile"
        android:textStyle="bold"
         android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />
      
 
    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
    
       <TextView
        android:id="@+id/txt_plans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/my_messages"
        android:textStyle="bold"
         android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />
      
 
    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
    
       <TextView
        android:id="@+id/txt_contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/other_service"
        android:textStyle="bold"
         android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />
      
 
    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
    
       <TextView
        android:id="@+id/txt_referFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/logout"
        android:textStyle="bold"
         android:layout_margin="10dp"
        android:textSize="14sp"
        android:textColor="@color/background" />
      
 
    <View
android:background="@color/background"
android:layout_width="260dp"
android:layout_margin="5dp"
android:layout_height="1dp"
></View>
   

</LinearLayout>